--- a/package.json
+++ b/package.json
@@ -19,5 +19,6 @@
     "sass": "^1.38.1",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1"
-  }
+  },
+  "packageManager": "yarn@3.2.2"
 }
